src/objects/NCP_Banner_News__mdt.object
<CustomObject>
    <fields>
        <fullName>NCP_Body__c</fullName>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NCP_End_Time__c</fullName>
        <description>End Time field.</description>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NCP_Subject__c</fullName>
        <description>Subject  field.</description>
        <label>Subject</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top Banner News</fullName>
                </value>
                <value>
                    <fullName>Page Banner News</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_URL__c</fullName>
        <description>URL field.</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NCP_Urgency_Level__c</fullName>
        <label>Urgency Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outage</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Info/Alert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Banner News</label>
    <pluralLabel>Banner News</pluralLabel>
    <validationRules>
        <fullName>NCP_Urgency_Level_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name,
AND( 
TEXT(NCP_Type__c)=&apos;Top Banner News&apos;, 
ISBLANK(TEXT( NCP_Urgency_Level__c )))
)</errorConditionFormula>
        <errorDisplayField>NCP_Urgency_Level__c</errorDisplayField>
        <errorMessage>Please select a value.</errorMessage>
    </validationRules>
</CustomObject>